Re-style the navbar to display account dropdown on the right side, ensure navbar behaves properly on smaller screens

--- a/styles/style.css
+++ b/styles/style.css
@@ -76,7 +76,6 @@ p {
 body {
   min-height: 400px;
   margin-bottom: 100px;
-  clear: both;
   background-color: #f5f5ff !important;
 }
 
